## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	$(SDL_CFLAGS)\
	 -Wall\
	 -g

AM_CXXFLAGS =\
	$(SDL_CFLAGS)\
	 -Wall\
	 -g

bin_PROGRAMS = test1

test1_SOURCES = \
	cSurface.cpp\
	cSurface.h\
	cfont.cpp\
	cfont.h\
	configtool.cpp\
	configtool.h\
	main.cpp\
	cSand.cpp\
	cSand.h\
	cVector.cpp\
	cVector.h\
	cgraphic.cpp\
	cgraphic.h

test1_LDFLAGS = \
	$(SDL_LIBS) -lm -lGL -lGLU

test1_LDADD = 

